--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -221,6 +221,7 @@
             android:layout_toStartOf="@+id/img_show_hide_pass"
             android:hint="@string/enter_new_password"
             android:inputType="textPassword"
+            android:maxLength="25"
             android:padding="15dp"
             android:maxLines="1"
             android:textColor="@color/white"
@@ -278,6 +279,7 @@
             android:layout_toStartOf="@+id/img_show_hide_confirm_pass"
             android:hint="@string/enter_confirm_password"
             android:inputType="textPassword"
+            android:maxLength="25"
             android:padding="15dp"
             android:maxLines="1"
             android:textColor="@color/white"
