--- a/app/src/main/res/layout/activity_congratulation.xml
+++ b/app/src/main/res/layout/activity_congratulation.xml
@@ -13,20 +13,19 @@
         android:layout_height="50dp"
         android:layout_marginBottom="20dp"
         android:src="@drawable/cifdaq_white"
-        app:layout_constraintBottom_toTopOf="@+id/titleRecieved"
+        app:layout_constraintBottom_toTopOf="@+id/title_congratulation"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/titleRecieved"
+        android:id="@+id/title_congratulation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="30dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
         android:fontFamily="@font/poppins_regular"
-        android:text="@string/congratulation_title"
         android:gravity="center"
         android:textColor="@color/white"
         android:textSize="25sp"
@@ -38,19 +37,20 @@
         tools:ignore="MissingConstraints" />
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/descReceived"
+        android:id="@+id/desc_congratulation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
+        android:layout_marginVertical="15dp"
+        android:layout_marginHorizontal="30dp"
         android:fontFamily="@font/gilroy_medium"
-        android:gravity="start"
+        android:gravity="center"
         android:text="@string/congratulation_desc"
         android:textColor="@color/grey"
-        android:textSize="12sp"
+        android:textSize="13sp"
         android:textStyle="normal"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titleRecieved"
+        app:layout_constraintTop_toBottomOf="@+id/title_congratulation"
         tools:ignore="MissingConstraints" />
 
 
