--- a/app/src/main/res/layout/activity_phase_recovery.xml
+++ b/app/src/main/res/layout/activity_phase_recovery.xml
@@ -78,21 +78,91 @@
         app:layout_constraintBottom_toBottomOf="parent"
         tools:ignore="MissingConstraints" />
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/txt_copy_to_clip"
-        android:layout_width="120dp"
-        android:layout_height="30dp"
-        android:gravity="center"
+    <LinearLayout
+        android:id="@+id/layout_copy_secret_key"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
-        android:fontFamily="@font/gilroy_medium"
-        android:background="@drawable/copy_to_clip"
-        android:textColor="@color/base_primary"
-        android:textSize="12sp"
-        android:textStyle="normal"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginEnd="20dp"
+        android:gravity="center"
+        android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/recycler_phrase"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints">
+
+        <TextView
+            android:id="@+id/txt_copy_to_clip_seed_phrase"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:fontFamily="@font/gilroy_medium"
+            android:text="Copy to Clipboard"
+            android:textColor="@color/base_primary"
+            android:textSize="15sp"
+            android:textStyle="normal" />
+
+        <ImageView
+            android:id="@+id/img_copy_secret_key"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:tint="@color/base_primary"
+            android:src="@drawable/copy_icon"
+            tools:ignore="UseAppTint" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/layout_private_key"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:gravity="center"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/layout_copy_secret_key"
+        tools:ignore="MissingConstraints">
+
+        <TextView
+            android:id="@+id/wallet_address_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/gilroy_medium"
+            android:text="@string/private_key_txt"
+            android:textColor="@color/white"
+            android:textSize="15sp"
+            android:textStyle="normal" />
+
+        <TextView
+            android:id="@+id/txt_copy_to_clip_private_key"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginStart="5dp"
+            android:fontFamily="@font/gilroy_medium"
+            android:maxLines="5"
+            android:text=""
+            android:textColor="@color/base_primary"
+            android:textSize="15sp"
+            android:textStyle="normal" />
+
+        <ImageView
+            android:id="@+id/img_copy_private_key"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:tint="@color/base_primary"
+            android:src="@drawable/copy_icon"
+            tools:ignore="UseAppTint" />
+
+    </LinearLayout>
 
 
     <com.google.android.material.button.MaterialButton
