--- a/app/src/main/res/layout/fragment_wallet_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_wallet_bottom_sheet.xml
@@ -5,19 +5,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/rounded_corner_bottomsheet"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="350dp">
 
     <TextView
         android:id="@+id/title_account"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="30dp"
-        android:fontFamily="@font/gilroy_medium"
+        android:layout_margin="20dp"
+        android:layout_marginBottom="10dp"
+        android:fontFamily="@font/poppins_regular"
         android:text="@string/account"
         android:textColor="@color/white"
         android:textSize="17sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/layout_bottom_sheet_container"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -27,7 +27,7 @@
         android:id="@+id/img_cross"
         android:layout_width="25dp"
         android:layout_height="25dp"
-        android:layout_margin="30dp"
+        android:layout_margin="20dp"
         android:padding="2dp"
         android:src="@drawable/icon_cross"
         app:layout_constraintBottom_toTopOf="@+id/layout_bottom_sheet_container"
@@ -39,14 +39,18 @@
     <RelativeLayout
         android:id="@+id/layout_bottom_sheet_container"
         android:layout_width="match_parent"
-        android:layout_height="350dp"
+        android:layout_height="300dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@+id/title_account"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         tools:ignore="MissingConstraints">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/layout_no_more_account"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:visibility="gone">
 
             <ImageView
@@ -75,24 +79,25 @@
                 android:textColor="@color/white"
                 android:textSize="15sp"
                 android:textStyle="normal"
-                app:layout_constraintBottom_toTopOf="@+id/buttonCreate"
+                app:layout_constraintBottom_toTopOf="@+id/button_create_new_account"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 tools:ignore="MissingConstraints" />
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/buttonCreate"
+                android:id="@+id/button_create_new_account"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="20dp"
-                android:layout_marginBottom="30dp"
+                android:layout_marginBottom="10dp"
+                android:foreground="@drawable/ripple_button"
                 android:background="@drawable/bg_border"
                 android:gravity="center"
                 android:paddingHorizontal="20dp"
                 android:text="@string/create_new_account"
-                android:textColor="@color/base_primary"
+                android:textColor="@color/white"
                 android:textSize="14sp"
                 android:textStyle="normal"
                 app:cornerRadius="0dp"
@@ -105,33 +110,35 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/layout_all_account"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent"
+            android:visibility="visible">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycler_account"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="0dp"
                 android:layout_marginBottom="10dp"
                 app:layout_constraintVertical_chainStyle="packed"
-                app:layout_constraintBottom_toTopOf="@+id/buttonCreateAccount"
+                app:layout_constraintBottom_toTopOf="@+id/button_create_account"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:ignore="MissingConstraints" />
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/buttonCreateAccount"
+                android:id="@+id/button_create_account"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="20dp"
-                android:layout_marginBottom="30dp"
+                android:layout_marginBottom="10dp"
+                android:foreground="@drawable/ripple_button"
                 android:background="@drawable/bg_border"
                 android:gravity="center"
                 android:paddingHorizontal="20dp"
                 android:text="@string/create_new_account"
-                android:textColor="@color/base_primary"
+                android:textColor="@color/white"
                 android:textSize="14sp"
                 android:textStyle="normal"
                 app:cornerRadius="0dp"
@@ -139,6 +146,93 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
+                tools:ignore="HardcodedText" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/layout_create_account"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone">
+
+            <TextView
+                android:id="@+id/tv_account_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/account_name"
+                android:textSize="15sp"
+                android:textColor="@color/white"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="10dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="MissingConstraints" />
+
+            <EditText
+                android:id="@+id/et_account_name"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:hint="@string/hint_enter_account_name"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginTop="20dp"
+                android:padding="15dp"
+                android:textColorHint="@color/grey"
+                android:textColor="@color/white"
+                android:inputType="text"
+                android:background="@drawable/bg_border_grey"
+                android:textSize="15sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_account_name"
+                tools:ignore="MissingConstraints,TextFields" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/button_cancel"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="10dp"
+                android:foreground="@drawable/ripple_button"
+                android:background="@drawable/bg_border"
+                android:gravity="center"
+                android:paddingHorizontal="20dp"
+                android:text="Cancel"
+                android:textColor="@color/white"
+                android:textSize="14sp"
+                android:textStyle="normal"
+                app:cornerRadius="0dp"
+                app:layout_constraintVertical_chainStyle="packed"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/button_create"
+                tools:ignore="HardcodedText" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/button_create"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginBottom="10dp"
+                android:foreground="@drawable/ripple_button"
+                android:background="@drawable/bg_border"
+                android:gravity="center"
+                android:paddingHorizontal="20dp"
+                android:text="Create"
+                android:textColor="@color/white"
+                android:textSize="14sp"
+                android:textStyle="normal"
+                app:cornerRadius="0dp"
+                app:layout_constraintVertical_chainStyle="packed"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/button_cancel"
                 tools:ignore="HardcodedText" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
