--- a/app/src/main/res/layout/header_navigation.xml
+++ b/app/src/main/res/layout/header_navigation.xml
@@ -29,15 +29,15 @@
         app:layout_constraintTop_toTopOf="parent"
         android:textStyle="normal" />
 
-    <ImageView
-        android:id="@+id/img_account"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="20dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/img_app"
-        android:src="@drawable/icon_account"/>
+<!--    <ImageView-->
+<!--        android:id="@+id/img_account"-->
+<!--        android:layout_width="40dp"-->
+<!--        android:layout_height="40dp"-->
+<!--        android:layout_marginTop="20dp"-->
+<!--        android:layout_marginStart="20dp"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/img_app"-->
+<!--        android:src="@drawable/icon_account"/>-->
 
     <ImageView
         android:id="@+id/img_nav_close"
@@ -54,10 +54,12 @@
         android:id="@+id/nav_layout_wallet_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:orientation="horizontal"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/img_account"
+        app:layout_constraintTop_toBottomOf="@+id/txt_wallet"
         tools:ignore="MissingConstraints">
 
         <TextView
@@ -88,7 +90,6 @@
         android:fontFamily="@font/gilroy_medium"
         android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
-        android:text="$123.3212"
         android:textColor="@color/grey"
         android:textSize="13sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -103,7 +104,6 @@
         android:layout_marginStart="20dp"
         android:layout_marginBottom="20dp"
         android:layout_marginTop="10dp"
-        android:text="dem0$w@llet#@ddre$$"
         android:ellipsize="middle"
         android:maxLines="1"
         android:textColor="@color/grey"
