--- a/app/src/main/res/layout/layout_full_screen_qr_code_dialog.xml
+++ b/app/src/main/res/layout/layout_full_screen_qr_code_dialog.xml
@@ -39,7 +39,7 @@
         android:layout_marginTop="30dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="30dp"
         android:fontFamily="@font/poppins_regular"
         android:text="@string/receive_transaction"
         android:gravity="center"
@@ -48,25 +48,25 @@
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/descReceived"
+        app:layout_constraintBottom_toTopOf="@+id/img_qr_code_recieve"
         app:layout_constraintBottom_toBottomOf="parent"
         tools:ignore="MissingConstraints" />
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/descReceived"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:fontFamily="@font/gilroy_medium"
-        android:text="@string/show_qr_desc"
-        android:gravity="start"
-        android:textColor="@color/grey"
-        android:textSize="12sp"
-        android:textStyle="normal"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/img_qr_code_recieve"
-        tools:ignore="MissingConstraints" />
+<!--    <androidx.appcompat.widget.AppCompatTextView-->
+<!--        android:id="@+id/descReceived"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_margin="20dp"-->
+<!--        android:fontFamily="@font/gilroy_medium"-->
+<!--        android:text="@string/show_qr_desc"-->
+<!--        android:gravity="center"-->
+<!--        android:textColor="@color/grey"-->
+<!--        android:textSize="12sp"-->
+<!--        android:textStyle="normal"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintBottom_toTopOf="@+id/img_qr_code_recieve"-->
+<!--        tools:ignore="MissingConstraints" />-->
 
     <ImageView
         android:id="@+id/img_qr_code_recieve"
@@ -124,7 +124,9 @@
             android:layout_height="15dp"
             android:layout_marginStart="5dp"
             android:layout_marginEnd="5dp"
-            android:src="@drawable/copy_icon" />
+            android:tint="@color/base_primary"
+            android:src="@drawable/copy_icon"
+            tools:ignore="UseAppTint" />
 
     </LinearLayout>
 
